--- a/KOAJS/koa_example_project/stream-objects/package.json
+++ b/KOAJS/koa_example_project/stream-objects/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node --watch ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nguyen Bao Huy",
@@ -10,6 +11,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "koa": "^2.15.3"
+    "koa": "^2.15.3",
+    "streaming-json-stringify": "^3.1.0"
   }
 }
