--- a/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
+++ b/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -46,6 +47,7 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-contentlayer2": "^0.5.1",
