--- a/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
+++ b/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.15.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.10.1",
     "lodash": "^4.17.21",
