--- a/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
+++ b/NEXTJS/shadcn_ui_nextjs/tutorials/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^11.15.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.10.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
